# tft_lolsadmemes

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
bot/: bot.py
bot/commands/: basics.py  tft_stats.py
bot/db/: client.py
bot/utils/: api.py
scripts/: datafromcsv.py  filldata.py  processdata.py  results.csv  summoners.csv  top24.csv
